k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xfinder-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: xfinder-api
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xfinder-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - path: / # Matches everything else
            pathType: Prefix
            backend:
              service:
                name: xfinder-frontend
                port:
                  number: 80
